Bug Fixes
Teams had no filters on their obvervables
jobs and assets had no disposal methods
teams had no JSON update function
jobs popup had no protection for non asset teams or team out of view

--- a/styles/pages/tasking.css
+++ b/styles/pages/tasking.css
@@ -576,6 +576,8 @@ tr.job:hover {
 .veh-pop__tasking-item {
   cursor: pointer;
 }
+
+.job-popup__tasking-row--no-job,
 .veh-pop__tasking-item--no-job {
   cursor: not-allowed;
 }
@@ -958,6 +960,9 @@ tr.job:hover {
 
 .job-cell {
     min-width: 0;
+    padding-right: 5px;
+    padding-left: 5px;
+    overflow: hidden;
 }
 
 /* Allow wrapping for the “long” columns so you don't lose information */
